Resize columns again to ensure 2 col layout on small mobile

--- a/AcornSat.Visualiser/Shared/OverviewField.razor.css
+++ b/AcornSat.Visualiser/Shared/OverviewField.razor.css
@@ -1,7 +1,7 @@
 .overview-field {
     margin-top: 8px;
     margin-bottom: 8px;
-    min-width: 150px;
+    min-width: 145px;
     margin-right: 10px;
     display: inline-block;
     vertical-align: top;
